--- a/SRB2-Emblem-Displayer/Project1/Project1.csproj
+++ b/SRB2-Emblem-Displayer/Project1/Project1.csproj
@@ -44,5 +44,10 @@
   <ItemGroup>
     <Content Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="path.ini">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
