LiveShare with Ors
modified code from text file displayer to have current features

--- a/SRB2-Emblem-Displayer/Project1/Project1.csproj
+++ b/SRB2-Emblem-Displayer/Project1/Project1.csproj
@@ -42,9 +42,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico">
